--- a/tctc-sard/_config.yml
+++ b/tctc-sard/_config.yml
@@ -23,6 +23,11 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+header_pages:
+- about.md
+- members.md
+- research.md
+- results.md
 
 # Build settings
 markdown: kramdown
