--- a/tctc-sard/_config.yml
+++ b/tctc-sard/_config.yml
@@ -13,18 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: 台灣全身性自體免疫風濕病臨床試驗合作聯盟
+subtitle: Taiwan Clinical Trial Consortium for Systemic Autoimmune Rheumatic Diseases
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 header_pages:
-- about.md
+- index.md
 - members.md
 - research.md
 - results.md
@@ -32,14 +30,8 @@ header_pages:
 t:
   en:
     title: Taiwan Clinical Trial Consortium for Systemic Autoimmune Rheumatic Diseases
-    about:
-      name: "About"
-      url: "/en/"
   zh-TW:
     title: 台灣全身性自體免疫風濕病臨床試驗合作聯盟
-    about:
-      name: "聯盟簡介"
-      url: "/zh-TW/"
 # Build settings
 markdown: kramdown
 theme: minima
