--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 台灣全身性自體免疫風濕病臨床試驗合作聯盟
 subtitle: Taiwan Clinical Trial Consortium for Systemic Autoimmune Rheumatic Diseases
-email: your-email@example.com
+email: hsiu_cheng@hotmail.com
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
